Added lang file support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -45,8 +45,8 @@ permissions:
       permission: citem.flag
     lore:
       permission: citem.lore
-    name:
-      permission: citem.name
+    rename:
+      permission: citem.rename
     save:
       permission: citem.save
     update:
