Started on Stats

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,7 +22,8 @@ commands:
   cremove:
     description:
     usage: /cremove <player> <ID> <amount>
-
+  # Stat Commands
+  stats:
 
 permissions:
   interaction:
