--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,6 +8,7 @@ commands:
   interaction:
     description: interaction command
     usage: /<command> <reload|list|view|trigger>
+    permission: interaction
     aliases: [ inter ]
   opengui:
     description: opengui
@@ -18,9 +19,11 @@ commands:
     usage: /<command> <save|lore|name|flag> [arguments]
   cgive:
     description: give a citem
+    permission: citem.give
     usage: /<command> <player> <ID> <amount>
   cremove:
     description: remove a citem
+    permission: citem.remove
     usage: /<command> <player> <ID> <amount>
   # CRecipe Commands
   crecipe:
@@ -29,15 +32,19 @@ commands:
   # Stat Commands
   stats:
     description: Stats Command
+    permission: stats.create
     usage: /<command> <create|delete|give|take|set|reset|view|reload|>
   globalstats:
     description: global stats command
+    permission: stats_global.create
     usage: /<command>
   tempunlockable:
     description: temp unlockable
+    permission: unlockable_temp.create
     usage: /<command>
   unlockable:
     description: Unlockable Command
+    permission: unlockable.create
     usage: /<command> <create|createtemp|give|givetemp|>
   # Economy Commands
   economy:
@@ -56,6 +63,215 @@ commands:
     permission: economy.pay
 
 permissions:
+  # Interaction Permissions
+  interaction:
+    description: grants access to all Interaction commands
+    default: op
+    children:
+      interaction.bind: true
+      interaction.unbind: true
+      interaction.reload.single: true
+      interaction.reload.all: true
+      interaction.trigger: true
+  interaction.bind:
+    description: Bind an inter
+    default: op
+  interaction.unbind:
+    description: Unbind an inter
+    default: op
+  interaction.reload:
+    description: grants access to all inter reload commands
+    default: op
+    children:
+      interaction.reload.all: true
+      interaction.reload.single: true
+  interaction.reload.single:
+    description: reload a single interaction
+    default: op
+  interaction.reload.all:
+    description: reload all inters
+    default: op
+  interaction.trigger:
+    description: trigger an interaction for a player
+    default: op
+  # Citem Permissions
+  citem.modify:
+    description: grants access to all citem modify commands
+    default: op
+    children:
+      citem.modify.lore: true
+      citem.modify.rename: true
+      citem.modify.flags: true
+      citem.modify.actions: true
+  citem.modify.lore:
+    description: edit lore
+    default: op
+  citem.modify.rename:
+    description: edit name
+    default: op
+  citem.modify.flags:
+    description: put flags
+    default: op
+  citem.modify.actions:
+    description: put interactions on an item
+    default: op
+
+  citem.save:
+    description: save an item
+    default: op
+  citem.delete:
+    description: delete a citem
+    default: op
+  citem.update:
+    description: update a citem
+    default: op
+  citem.give:
+    description: give someone a citem
+    default: op
+  citem.remove:
+    description: remove a citem from someone
+    default: op
+  # Stats Permissions
+  stats.modify:
+    description: grants access to all stats commands
+    default: op
+    children:
+      stats.modify.give: true
+      stats.modify.take: true
+      stats.modify.set: true
+      stats.modify.reset: true
+  stats.modify.give:
+    description: give stat
+    default: op
+  stats.modify.take:
+    description: take stat
+    default: op
+  stats.modify.set:
+    description: set stat
+    default: op
+  stats.modify.reset:
+    description: reset stat
+    default: op
+
+  stats.create:
+    description: create stat
+    default: op
+  stats.delete:
+    description: delete stat
+    default: op
+
+  stats.reload:
+    description: reload stats
+    default: op
+    children:
+      stats.reload.single: true
+      stats.reload.all: true
+
+  stats.reload.single:
+    description: reload single stat
+    default: op
+  stats.reload.all:
+    description: reload all stats
+    default: op
+
+  stats.view:
+    description: view a stat
+    default: op
+
+  # Stats Global Permissions
+  stats_global:
+    description: grants access to global stats commands
+    default: op
+    children:
+      stats_global.create: true
+      stats_global.delete: true
+      stats_global.modify.give: true
+      stats_global.modify.take: true
+      stats_global.modify.set: true
+      stats_global.modify.reset: true
+      stats_global.reload: true
+
+  stats_global.create:
+    description: create a global stat
+    default: op
+
+  stats_global.delete:
+    description: delete a global stat
+    default: op
+
+  stats_global.modify.give:
+    description: give a global stat
+    default: op
+
+  stats_global.modify.take:
+    description: take a global stat
+    default: op
+
+  stats_global.modify.set:
+    description: set a global stat
+    default: op
+
+  stats_global.modify.reset:
+    description: reset a global stat
+    default: op
+
+  stats_global.reload:
+    description: reload global stats
+    default: op
+
+  # Unlockable Permissions
+  unlockable:
+    description: grants access to unlockable commands
+    default: op
+    children:
+      unlockable.create: true
+      unlockable.delete: true
+      unlockable.modify.give: true
+      unlockable.modify.take: true
+
+  unlockable.create:
+    description: create an unlockable
+    default: op
+
+  unlockable.delete:
+    description: delete an unlockable
+    default: op
+
+  unlockable.modify.give:
+    description: give an unlockable
+    default: op
+
+  unlockable.modify.take:
+    description: take an unlockable
+    default: op
+
+  # Unlockable Temporary Permissions
+  unlockable_temp:
+    description: grants access to temporary unlockable commands
+    default: op
+    children:
+      unlockable_temp.create: true
+      unlockable_temp.delete: true
+      unlockable_temp.give: true
+      unlockable_temp.take: true
+
+  unlockable_temp.create:
+    description: create a temporary unlockable
+    default: op
+
+  unlockable_temp.delete:
+    description: delete a temporary unlockable
+    default: op
+
+  unlockable_temp.give:
+    description: give a temporary unlockable
+    default: op
+
+  unlockable_temp.take:
+    description: take a temporary unlockable
+    default: op
+
+  # Economy Permissions
   economy.balance:
     description: Grants access to all Economy commands
     default: op
@@ -97,7 +313,6 @@ permissions:
   economy.modify.currencies:
     description: view all currencies
     default: op
-
   economy.pay:
     description: pay someone a currency
     default: true
