Added Permissions and lang to gambling

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -64,6 +64,7 @@ commands:
   coinflip:
     description: GAMBLING
     usage: /coinflip <amount> <heads|tails>
+    permission: economy.coinflip
 
 permissions:
   # Interaction Permissions
@@ -319,3 +320,6 @@ permissions:
   economy.pay:
     description: pay someone a currency
     default: true
+  economy.coinflip:
+    description: Coinflip
+    default: false
