--- a/pom.xml
+++ b/pom.xml
@@ -78,5 +78,15 @@
             <version>1.5.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.1.0</version> <!-- Use the latest stable version -->
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.29</version> <!-- Use the latest stable version -->
+        </dependency>
     </dependencies>
 </project>
