--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
             <url>https://maven.pkg.github.com/hektortm/woscore</url>
         </repository>
         <repository>
+            <id>sk89q-repo</id>
+            <url>https://maven.enginehub.org/repo/</url>
+        </repository>
+        <repository>
             <id>papermc-repo</id>
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
@@ -78,5 +82,11 @@
             <version>1.5.4</version>
             <scope>provided</scope>
         </dependency>
+            <dependency>
+                <groupId>com.sk89q.worldguard</groupId>
+                <artifactId>worldguard-bukkit</artifactId>
+                <version>7.0.12</version>
+                <scope>provided</scope>
+            </dependency>
     </dependencies>
 </project>
