--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '1.0'
 main: me.hektortm.woSSystems.WoSSystems
 api-version: '1.21'
 author: HektorTM
-depend: [WoSCore]
+depend: [WoSCore, WorldGuard]
 commands:
   # Interaction Commands
   interaction:
