--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.hektortm</groupId>
     <artifactId>WoSSystems</artifactId>
-    <version>1.0.4</version>
+    <version>1.21.8-0.0.1</version>
     <packaging>jar</packaging>
 
     <name>WoSSystems</name>
@@ -53,7 +53,7 @@
     <repositories>
         <repository>
             <id>github</id>
-            <url>https://maven.pkg.github.com/hektortm/woscore</url>
+            <url>https://maven.pkg.github.com/worldofsorcery/core</url>
         </repository>
         <repository>
             <id>sk89q-repo</id>
@@ -89,25 +89,24 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.21.1-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
+            <version>1.21.8-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>me.hektortm</groupId>
-            <artifactId>woscore</artifactId>
-            <version>1.6.9</version>
+            <artifactId>core</artifactId>
+            <version>1.21.8-0.0.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard-bukkit</artifactId>
-            <version>7.0.12</version>
+            <version>7.0.14</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.citizensnpcs</groupId>
             <artifactId>citizens-main</artifactId>
-            <version>2.0.35-SNAPSHOT</version>
+            <version>2.0.39-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
             <exclusions>
@@ -117,11 +116,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>com.comphenix.protocol</groupId>
-            <artifactId>ProtocolLib</artifactId>
-            <version>5.3.0</version>
-            <scope>provided</scope>
-        </dependency>
+
     </dependencies>
 </project>
