--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -128,331 +128,7 @@ commands:
     description: calendar management
     usage: /<command> <view|set> [date]
 
-permissions:
-  # Citem Permissions
-  citem.modify:
-    description: grants access to all citem modify commands
-    default: op
-    children:
-      citem.modify.lore: true
-      citem.modify.rename: true
-      citem.modify.flags: true
-      citem.modify.actions: true
-  citem.modify.lore:
-    description: edit lore
-    default: op
-  citem.modify.rename:
-    description: edit name
-    default: op
-  citem.modify.flags:
-    description: put flags
-    default: op
-  citem.modify.actions:
-    description: put interactions on an item
-    default: op
-
-  citem.save:
-    description: save an item
-    default: op
-  citem.delete:
-    description: delete a citem
-    default: op
-  citem.update:
-    description: update a citem
-    default: op
-  citem.give:
-    description: give someone a citem
-    default: op
-  citem.remove:
-    description: remove a citem from someone
-    default: op
-  citem.sign:
-    description: sign a citem
-    default: true
-
-  # Time Permissions
-  time:
-    subcommands:
-      date:
-        permission: time.date
-        description: "set a date"
-      freeze:
-        permission: time.freeze
-        description: "freeze/unfreeze time"
-      reload:
-        permission: time.reload
-        description: "reload the config"
-
-  # Loot table Permissions
-  loottable.give:
-    description: give lt
-    default: op
-  loottable.reload:
-    description: reload lts
-    default: op
-
-  # Chat Permissions
-  nick.request:
-    description: access to all request cmds
-    default: op
-    children:
-      nick.request.send: true
-      nick.request.view: true
-  nick.request.send:
-    description: Send a Nickname request
-    default: true
-  nick.request.view:
-    description: view Nickname requests
-    default: op
-  nick.reserve:
-    description: reserve
-    default: op
-  nick.unreserve:
-    description: unreserve
-    default: op
-
-  chat.channel.create:
-    description: create a channel
-    default: op
-  chat.channel.join:
-    description: join a channel
-    default: true
-  chat.channel.leave:
-    description: leave a channel
-    default: true
-  chat.channel.focus:
-    description: focus a channel
-    default: true
-  chat.channel.unfocus:
-    description: unfocus channels
-    default: true
-  chat.channel.list:
-    description: view all channels
-    default: true
-  chat.channel.broadcast:
-    description: broadcast to a channel
-    default: op
-  chat.channel.modify:
-    description: modify a channel
-    default: op
-
-  # Interaction Permissions
-  interaction:
-    description: grants access to all Interaction commands
-    default: op
-    children:
-      interaction.bind: true
-      interaction.unbind: true
-      interaction.reload.single: true
-      interaction.reload.all: true
-      interaction.trigger: true
-  interaction.bind:
-    description: Bind an inter
-    default: op
-  interaction.unbind:
-    description: Unbind an inter
-    default: op
-  interaction.reload:
-    description: grants access to all inter reload commands
-    default: op
-    children:
-      interaction.reload.all: true
-      interaction.reload.single: true
-  interaction.reload.single:
-    description: reload a single interaction
-    default: op
-  interaction.reload.all:
-    description: reload all inters
-    default: op
-  interaction.trigger:
-    description: trigger an interaction for a player
-    default: op
-
-  # Stats Permissions
-  stats.modify:
-    description: grants access to all stats commands
-    default: op
-    children:
-      stats.modify.give: true
-      stats.modify.take: true
-      stats.modify.set: true
-      stats.modify.reset: true
-  stats.modify.give:
-    description: give stat
-    default: op
-  stats.modify.take:
-    description: take stat
-    default: op
-  stats.modify.set:
-    description: set stat
-    default: op
-  stats.modify.reset:
-    description: reset stat
-    default: op
-
-  stats.create:
-    description: create stat
-    default: op
-  stats.delete:
-    description: delete stat
-    default: op
-
-  stats.reload:
-    description: reload stats
-    default: op
-    children:
-      stats.reload.single: true
-      stats.reload.all: true
-
-  stats.reload.single:
-    description: reload single stat
-    default: op
-  stats.reload.all:
-    description: reload all stats
-    default: op
-
-  stats.view:
-    description: view a stat
-    default: op
-
-  # Stats Global Permissions
-  stats_global:
-    description: grants access to global stats commands
-    default: op
-    children:
-      stats_global.create: true
-      stats_global.delete: true
-      stats_global.modify.give: true
-      stats_global.modify.take: true
-      stats_global.modify.set: true
-      stats_global.modify.reset: true
-      stats_global.reload: true
-
-  stats_global.create:
-    description: create a global stat
-    default: op
-
-  stats_global.delete:
-    description: delete a global stat
-    default: op
-
-  stats_global.modify.give:
-    description: give a global stat
-    default: op
-
-  stats_global.modify.take:
-    description: take a global stat
-    default: op
-
-  stats_global.modify.set:
-    description: set a global stat
-    default: op
-
-  stats_global.modify.reset:
-    description: reset a global stat
-    default: op
-
-  stats_global.reload:
-    description: reload global stats
-    default: op
-
-  # Unlockable Permissions
-  unlockable:
-    description: grants access to unlockable commands
-    default: op
-    children:
-      unlockable.create: true
-      unlockable.delete: true
-      unlockable.modify.give: true
-      unlockable.modify.take: true
-
-  unlockable.create:
-    description: create an unlockable
-    default: op
-
-  unlockable.delete:
-    description: delete an unlockable
-    default: op
-
-  unlockable.modify.give:
-    description: give an unlockable
-    default: op
-
-  unlockable.modify.take:
-    description: take an unlockable
-    default: op
-
-  # Unlockable Temporary Permissions
-  unlockable_temp:
-    description: grants access to temporary unlockable commands
-    default: op
-    children:
-      unlockable_temp.create: true
-      unlockable_temp.delete: true
-      unlockable_temp.give: true
-      unlockable_temp.take: true
-
-  unlockable_temp.create:
-    description: create a temporary unlockable
-    default: op
-
-  unlockable_temp.delete:
-    description: delete a temporary unlockable
-    default: op
-
-  unlockable_temp.give:
-    description: give a temporary unlockable
-    default: op
-
-  unlockable_temp.take:
-    description: take a temporary unlockable
-    default: op
-
-  # Economy Permissions
-  economy.balance:
-    description: Grants access to all Economy commands
-    default: op
-    children:
-      economy.balance.self: true
-      economy.balance.others: true
-  economy.balance.self:
-    description: view your balance
-    default: true
-  economy.balance.others:
-    description: view someone elses balance
-    default: op
-
-  economy.modify:
-    description: Grants all access to modify commands
-    default: op
-    children:
-      economy.modify.give: true
-      economy.modify.take: true
-      economy.modify.set: true
-      economy.modify.reset: true
-      economy.modify.random: true
-      economy.modify.currencies: true
-  economy.modify.give:
-    description: give someone a currency
-    default: op
-  economy.modify.take:
-    description: take a currency from someone
-    default: op
-  economy.modify.set:
-    description: set someones currency
-    default: op
-  economy.modify.reset:
-    description: reset someones currency
-    default: op
-  economy.modify.random:
-    description: give someone a random amount of a currency
-    default: op
-  economy.modify.currencies:
-    description: view all currencies
-    default: op
-  economy.pay:
-    description: pay someone a currency
-    default: true
-  economy.coinflip:
-    description: Coinflip
-    default: true
+  link:
+    description: link management
+    usage: /<command> <website|discord> [code]
+    permission:
