--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <id>dmulloy2-repo</id>
             <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
+        <repository>
+            <id>aselstudios-repository</id>
+            <name>Asel Studios Repository</name>
+            <url>https://repo.aselstudios.com/releases</url>
+        </repository>
     </repositories>
 
 
@@ -119,7 +124,7 @@
         <dependency>
             <groupId>me.hektortm</groupId>
             <artifactId>core</artifactId>
-            <version>1.21.8-0.0.3</version>
+            <version>1.21.8-0.0.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -140,6 +145,11 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.aselstudios</groupId>
+            <artifactId>LuxDialoguesAPI</artifactId>
+            <version>2.0.1</version>
         </dependency>
 
     </dependencies>
