--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.hektortm</groupId>
     <artifactId>WoSSystems</artifactId>
-    <version>1.21.8-0.0.2</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>WoSSystems</name>
 
