--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Systems
-version: '1.21.8-0.0.2'
+version: '1.0.0'
 main: me.hektortm.woSSystems.WoSSystems
 api-version: '1.21.8'
 author: HektorTM
